crates/cctui-tui/src/snapshots/cctui__view_snapshots__session_list_rich_statuses.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~4 live  ▪ 0/0 machines  $0.00 today  ●4 unread  ! 2 need input — Ctrl+g
 1 Sessions  2 Bookmarks  3 Overview   starred · live · dispatched  sort: activity ↓  group: status
   ▾ Needs input (1)
▸    ● [claude-code] deploy (main)  opus  0s  $1.25  ! ⚡
   ▾ Working (3)
     ● [claude-code] cctui (main)  opus  0s  $1.25  ⚙14 8s  3/7 Running tests  ●4
     ● [claude-code] web (main)  opus  0s  $1.25  ⚙2 3m  asleep  ?
     ◐ [claude-code] api (main)  opus  0s  $1.25  stale 42m
   ▾ Completed (2)
     ☾ [claude-code] notes (main)  opus  0s  $1.25  hibernated
     ○ [claude-code] infra (main)  opus  0s  $1.25  ✕machine offline












 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
