crates/cctui-tui/src/snapshots/cctui__view_snapshots__session_list_rich_statuses_at_eighty_columns.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: "render_screen_sized(&mut app, 80, 24)"
---
 cctui  v0.0.0-test  ● ~4  ▪ 0/0  $0.00  ●4  ! 2 need input — Ctrl+g
 1 Sessions  2  3   starred · live · dispatched  sort: activity ↓  group: status
   ▾ Needs input (1)
▸    ● [claude-code] deploy (main)  opus  0s  $1.25  ! ⚡
   ▾ Working (3)
     ● [claude-code] cctui (main)  opus  0s  $1.25  ⚙14 8s  3/7 Running tes…  ●4
     ● [claude-code] web (main)  opus  0s  $1.25  ⚙2 3m  asleep  ?
     ◐ [claude-code] api (main)  opus  0s  $1.25  stale 42m
   ▾ Completed (2)
     ☾ [claude-code] notes (main)  opus  0s  $1.25  hibernated
     ○ [claude-code] infra (main)  opus  0s  $1.25  ✕machine offline












 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
