crates/cctui-tui/src/snapshots/cctui__view_snapshots__session_list_scrolls_when_rows_exceed_the_viewport.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 153
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  34 sessions  ● 33 active  ! 1 need input — Ctrl+g
 Sessions
   ▾ Needs input (1)
▸    ● [claude-code] infra (main)  opus  0s  $1.25
   ▾ Working (31)
     ● [claude-code] cctui (main)  opus  0s  $1.25
     ▾ subagents (1/1 running)
       ↳ ● [claude-code] cctui-sub (main)  opus  0s  $1.25
     ● [claude-code] extra00 (main)  opus  0s  $1.25
     ● [claude-code] extra01 (main)  opus  0s  $1.25
     ● [claude-code] extra02 (main)  opus  0s  $1.25
     ● [claude-code] extra03 (main)  opus  0s  $1.25
     ● [claude-code] extra04 (main)  opus  0s  $1.25
     ● [claude-code] extra05 (main)  opus  0s  $1.25
     ● [claude-code] extra06 (main)  opus  0s  $1.25
     ● [claude-code] extra07 (main)  opus  0s  $1.25
     ● [claude-code] extra08 (main)  opus  0s  $1.25
     ● [claude-code] extra09 (main)  opus  0s  $1.25
     ● [claude-code] extra10 (main)  opus  0s  $1.25
     ● [claude-code] extra11 (main)  opus  0s  $1.25
     ● [claude-code] extra12 (main)  opus  0s  $1.25
     ● [claude-code] extra13 (main)  opus  0s  $1.25
     ● [claude-code] extra14 (main)  opus  0s  $1.25
 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
