crates/cctui-tui/src/snapshots/cctui__view_snapshots__session_list_search_including_archived.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2 Bookmarks  3 Overview   starred · live · dispatched  sort: activity ↓  group: status
▸    ● [claude-code] gateway (main)  opus  0s  $1.25
       …the auth flow



















 / auth▏   [archived: on]  1+ hits
