crates/cctui-tui/src/snapshots/cctui__view_snapshots__session_list_search_prompt_before_any_reply.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 304
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2  3  4  6  8   starred · live · dispatched  sort: activity ↓  group: status
 searching…




















 / machine:cyberia auth▏   [archived: off]  searching…
