crates/cctui-tui/src/snapshots/cctui__view_snapshots__session_list_search_results_with_highlighted_snippets.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 322
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2  3  4  6  8   starred · live · dispatched  sort: activity ↓  group: status
▸    ● [claude-code] gateway (main)  opus  0s  $1.25
       …refresh the auth token before the gateway
     ● [claude-code] api (main)  opus  0s  $1.25
       …the auth token expired

















 / auth token▏   [archived: off]  2 hits
