crates/cctui-tui/src/snapshots/cctui__view_snapshots__session_list_search_with_no_match.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 332
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2  3  4   starred · live · dispatched  sort: activity ↓  group: status
 no match




















 / nothing matches this▏   [archived: off]  no match
