crates/cctui-tui/src/snapshots/cctui__view_snapshots__session_list_sections_folded.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 289
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  18 sessions  ● 18 active
 Sessions
   ▾ Pinned (1)
▸    ● [claude-code] starred (main)  opus  0s  $1.25
   ▸ Working (1)


















 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
